reuse ref TODO in openApi spec add flyway migration add GitProperties bean from Boot autoconfiguration add test slice for web
